work on printer page and queue
